--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,14 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto' sans-serif;
-  background-color: red;
+  background-color: #000;
+}
+
+h1, p {
+  margin-bottom: 1rem;
+  @media screen and(min-width:768px) {
+    margin-bottom: 1.5rem;
+  }
 }
 
 button {
