--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -10,6 +10,7 @@
   color: #FFF;
   background: linear-gradient(to bottom, rgba(74, 74, 74, 0.6), rgba(0,0,0,0));
   transition: background-color .3s ease-in-out;
+  z-index: 1;
   a {
     color: #FFF;
     text-decoration: none;
